RESOLVED FIXED18088
white-space:nowrap; float:left; causing the misalignment issue
https://bugs.webkit.org/show_bug.cgi?id=18088
Summary white-space:nowrap; float:left; causing the misalignment issue
jasneet
Reported 2008-03-25 15:49:46 PDT
I Steps: Go to the reduced test case II Issue: The layout is incorrect III Conclusion: css properties in lex_17 : white-space:nowrap; float:left; are causing the issue IV Other browsers: IE7: ok FF3: ok Opera9.24: ok V Nightly tested: 31238
Attachments
reduction (628 bytes, text/html)
2008-03-25 15:50 PDT, jasneet
no flags
jasneet
Comment 1 2008-03-25 15:50:08 PDT
Created attachment 20053 [details] reduction
mitz
Comment 2 2008-07-09 17:20:16 PDT
mitz
Comment 3 2008-07-12 16:32:51 PDT
Note You need to log in before you can comment on or make changes to this bug.