WebCore:

Reviewed by Oliver Hunt.

        - fix https://bugs.webkit.org/show_bug.cgi?id=18088
          <rdar://problem/6036232> white-space:nowrap; float:left; causing the misalignment issue

        Test: fast/block/basic/min-pref-width-nowrap-floats.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::calcInlinePrefWidths): Fixed a case where a
        float's width was added to the minimum preferred widths instead of just
        acting as a lower bound on the minimum preferred width (since the float
        can always be pushed down to be the only thing on the line).

LayoutTests:

        Reviewed by Oliver Hunt.

        - test for https://bugs.webkit.org/show_bug.cgi?id=18088
          <rdar://problem/6036232> white-space:nowrap; float:left; causing the misalignment issue

        * fast/block/basic/min-pref-width-nowrap-floats.html: Added.
        * platform/mac/fast/block/basic/min-pref-width-nowrap-floats-expected.checksum: Added.
        * platform/mac/fast/block/basic/min-pref-width-nowrap-floats-expected.png: Added.
        * platform/mac/fast/block/basic/min-pref-width-nowrap-floats-expected.txt: Added.



Canonical link: https://commits.webkit.org/27584@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35152 268f45cc-cd09-0410-ab3c-d52691b4dbfc